Добавлены модели данных,  реализованы фильтрация, удаление и добавление данных, безопасность ввода

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -978,3 +978,8 @@ main {
 
 .statistics__item:not(:last-child) {
   margin-bottom: 78px; }
+
+.error {
+  color:#e7244b;
+  padding: 0 20px 20px;
+}
